--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
     "react-use-cart": "^1.13.0",
+    "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "swiper": "^11.1.1",
     "yup": "^1.4.0"
@@ -44,6 +45,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-google-recaptcha": "^2.1.9",
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
     "jest": "^29.7.0",
